--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 bevy = "0.9.1"
 rand = "0.8.5"
+bevy_mod_picking = "0.11.0"
+
 
 
 # Enable a small amount of optimization in debug mode
