--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bevy_mod_picking = "0.11.0"
 bevy_editor_pls = "0.2.0"
 big-brain = "0.16.0"
 bevy_mod_debugdump = "0.6.0"
+bevy_prototype_debug_lines = "0.9.0"
 
 
 
